# tuilib

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: tui_example.rs
src/: colors.rs  element_tree.rs  elements.rs  errors.rs  input.rs  input_callbacks.rs  input_observers.rs  lib.rs  lines.rs  tui.rs
src/complex_elements/: canvas.rs  element_tree.rs  mod.rs
src/elements/: mod.rs
src/elements/complex/: canvas.rs  element_tree.rs  mod.rs
src/elements/simple/: button.rs  interactable.rs  line_box.rs  mod.rs  text.rs  text_box.rs
src/input/: callbacks.rs  input.rs  mod.rs  observers.rs
