[package]
name = "charflow"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.132"
nix = "0.26.1"
signal-hook = "0.3.14"
serde = {version = "1.0", features = ["derive", "rc"], optional = true}

[features]
serde = ["dep:serde"]
